tests/integration/snapshots/main__integration__err__error_wrong_type_for_argument.snap
---
source: tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: failed to parse "yes" as usize
   ╭─[ <cli>:1:15 ]
   │
 1 │ --concurrency yes
   │               ─┬─  
   │                ╰─── failed to parse "yes" as usize
───╯
